front-edn almost done

--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,19 @@
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-body {
-  @apply font-['roboto'] bg-mainBg
+
+html {
+  @apply font-['Oswald'] bg-darkViolet text-darkViolet h-screen
+}
+
+html {
+  font-family: "Oswald", sans-serif;
+  font-weight: 600;
+  font-style: normal;
+  background: linear-gradient(rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0.75)), url('/src/assets/security.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
 }
